Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5935

Correct lnetctl utilities errors discovered during testing

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.7.0
    • Lustre 2.7.0
    • 3
    • Dynamic LNET Configuration
    • 16573

      While testing lnetctl I encountered a few bugs. One of the bugs is lnetctl peer_credits show prints out help for stats. The second error is lnetctl stats does not give any information but instead gives me a error.

            jamesanunez James Nunez (Inactive)
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: